# rust-backend

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml  diesel.toml  docker.env  init.sql
.github/workflows/: rust.yml
.sqlx/: query-0f82ca8312bdb273aac41d04fc09b77a138748fcf4c57e2668b1bd7d20bdba0e.json
src/: main.rs  models.rs  schema.rs
src/controllers/: example_controller.rs  file_controller.rs  mod.rs
src/services/: example_service.rs  file_service.rs  mod.rs
src/stores/: example_store.rs  file_store.rs  mod.rs
src/types/: mod.rs  tmp_message.rs
src/utils/: backend_error.rs  example.rs  mod.rs  shared_state.rs
