[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.2"
tokio = { version = "1.34.0", features = ["full"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio", "time", "postgres"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
dotenv = "0.15.0"
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["trace"] }
tracing-subscriber = { version = "0.3.18", features = [] }
tracing = "0.1.40"
