[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.2", features = ["multipart"] }
tokio = { version = "1.34.0", features = ["full"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio", "time", "uuid", "postgres"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
dotenv = "0.15.0"
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["trace", "cors"] }
tracing-subscriber = { version = "0.3.18", features = [] }
tracing = "0.1.40"
futures-util = "0.3.29"
tar = "0.4.40"
anyhow = "1.0.79"
xz = "0.1.0"
rayon = "1.8.1"
regex = "1.10.3"
time = { version = "0.3.34", features = ["parsing"] }