[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.2", features = ["multipart"] }
axum-macros = "0.4.1"
tokio = { version = "1.34.0", features = ["full"] }
diesel = { version = "2.1", features = ["postgres", "uuid", "serde_json", "time", "chrono"] }
deadpool-diesel = { version = "0.5.0", features = ["postgres"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
dotenvy = "0.15.7"
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["trace", "cors"] }
tracing-subscriber = { version = "0.3.18", features = [] }
tracing = "0.1.40"
futures-util = "0.3.29"
tar = "0.4.40"
xz = "0.1.0"
rayon = "1.8.1"
regex = "1.10.3"
time = { version = "0.3.34", features = ["parsing"] }
chrono = "0.4.34"
uuid = "1.7.0"
